No Passwords in GIT

--- a/API-import.ipynb
+++ b/API-import.ipynb
@@ -32,11 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "ENDPOINT = os.environ['ENDPOINT']\n",
-    "DB_NAME = os.environ['DB_NAME']\n",
-    "USERNAME = os.environ['USERNAME']\n",
-    "PASSWORD = os.environ['PASSWORD']"
+    "endpoint = os.getenv('ENDPOINT')\n",
+    "db_name = os.getenv('DB_NAME')\n",
+    "username = os.getenv('USERNAME')\n",
+    "password = os.getenv('PASSWORD')"
    ]
   },
   {
