--- a/API-import.ipynb
+++ b/API-import.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "745bff8c",
    "metadata": {},
    "outputs": [],
@@ -22,20 +22,26 @@
     "import requests\n",
     "import psycopg2\n",
     "import os\n",
-    "import boto3"
+    "import boto3\n",
+    "from psycopg2.extras import execute_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8b99a536",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get Environment Variables\n",
     "endpoint = os.getenv('ENDPOINT')\n",
     "db_name = os.getenv('DB_NAME')\n",
     "username = os.getenv('USERNAME')\n",
-    "password = os.getenv('PASSWORD')"
+    "password = os.getenv('PASSWORD')\n",
+    "aws_access_key_id = os.getenv('AWS_ACCESS_KEY_ID_INTERNAL')\n",
+    "aws_secret_access_key = os.getenv('AWS_SECRET_ACCESS_KEY_INTERNAL')\n",
+    "bucket_name = os.getenv('BUCKET_NAME')\n",
+    "\n"
    ]
   },
   {
@@ -45,8 +51,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "\n",
     "def upload_dataframe_to_db(df, table_name, conn):\n",
     "    cur = conn.cursor()\n",
@@ -75,12 +79,9 @@
     "    \n",
     "    cur.close()\n",
     "\n",
-    "def upload_dataframe_to_bucket(df, foldername):\n",
+    "def upload_dataframe_to_bucket(df, foldername,s3 ,bucket_name):\n",
     "    today = str(dt.datetime.today().date())\n",
-    "\n",
-    "    s3 = boto3.client('s3')\n",
-    "    bucket_name = 'hslu-test-env-brunner'\n",
-    "    key = foldername + '/' + today + '.json'  # Key = path in the bucket\n",
+    "    key = foldername + '/' + foldername + '_' + today + '.json'  # Key = path in the bucket\n",
     "\n",
     "    data = df.reset_index().to_json(orient=\"records\", date_format=\"iso\")\n",
     "\n",
@@ -90,6 +91,72 @@
     "        Body=json.dumps(data),\n",
     "        ContentType='application/json'\n",
     "    )\n",
+    "\n",
+    "def fetch_cbet_data(date: str) -> dict:\n",
+    "    base_url = \"https://api.energy-charts.info/cbet\"\n",
+    "    params = {\n",
+    "        \"country\": \"ch\",\n",
+    "        \"start\": date\n",
+    "    }\n",
+    "    headers = {\n",
+    "        'accept': 'application/json'\n",
+    "    }\n",
+    "\n",
+    "    response = requests.get(base_url, params=params, headers=headers)\n",
+    "    if response.status_code == 200:\n",
+    "        return response.json()\n",
+    "    else:\n",
+    "        print(f\"Error during requesting CBET-Data for {date}: {response.status_code}\")\n",
+    "        return {}\n",
+    "    \n",
+    "\n",
+    "def extract_cbet_data(json_data: dict) -> pd.DataFrame:\n",
+    "    records = []\n",
+    "    timestamps = json_data.get('unix_seconds', [])\n",
+    "    for country in json_data.get('countries', []):\n",
+    "        country_name = country.get('name')\n",
+    "        values = country.get('data', [])\n",
+    "\n",
+    "        for ts, value in zip(timestamps, values):\n",
+    "            dtime = dt.datetime.utcfromtimestamp(ts)\n",
+    "            records.append({\n",
+    "                'timestamp': dtime,\n",
+    "                'country': country_name,\n",
+    "                'value': value\n",
+    "            })\n",
+    "            df_records = pd.DataFrame(records)\n",
+    "    return df_records\n",
+    "\n",
+    "def insert_cbet_data_to_db(df_cbet, table_name, conn):\n",
+    "    cur = conn.cursor()\n",
+    "    df_cbet = df_cbet.fillna(0)\n",
+    "\n",
+    "    column_defs = ', '.join([\n",
+    "        f\"{col} {'timestamp' if col == 'timestamp' else ('text' if col == 'unit' else 'float')}\"\n",
+    "        for col in df_cbet.columns\n",
+    "        ])\n",
+    "\n",
+    "    create_query = f\"CREATE TABLE IF NOT EXISTS {table_name} ({column_defs});\"\n",
+    "    cur.execute(create_query)\n",
+    "\n",
+    "    insert_query = f\"\"\"\n",
+    "    INSERT INTO {table_name} (timestamp, country, value)\n",
+    "    VALUES %s\n",
+    "    \"\"\"\n",
+    "    data_tuples = [\n",
+    "        (row['timestamp'], row['country'], row['value'])\n",
+    "        for _, row in df_cbet.iterrows()\n",
+    "    ]\n",
+    "\n",
+    "    try:\n",
+    "        execute_values(cur, insert_query, data_tuples)\n",
+    "        conn.commit()\n",
+    "        print(\"CBET-Data successfully implemented.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in implementing CBET-Data: {e}\")\n",
+    "        conn.rollback()\n",
+    "    finally:\n",
+    "        cur.close()\n",
     "\n",
     "def lambda_handler(event, context):\n",
     "    date = dt.datetime.today().date()\n",
@@ -101,6 +168,8 @@
     "    api_response_power = api_result_power.json()\n",
     "    api_response_prices = api_result_prices.json()\n",
     "\n",
+    "    cbet_json = fetch_cbet_data(start_date)\n",
+    "\n",
     "    api_df_power = pd.DataFrame(api_response_power[\"production_types\"])\n",
     "    api_df_power_t = pd.DataFrame(api_df_power['data'].tolist()).T\n",
     "    api_df_power_t.columns = api_df_power['name']\n",
@@ -111,23 +180,37 @@
     "    api_df_price.columns = ['Price', 'Unit']\n",
     "    api_df_price.index = pd.to_datetime(api_response_prices[\"unix_seconds\"], unit='s')\n",
     "\n",
+    "    api_df_cbet = extract_cbet_data(cbet_json)\n",
+    "\n",
     "    try:\n",
-    "        print(\"Connecting to DB...\")\n",
+    "        print(\"Connecting to DB & Bucket...\")\n",
     "        conn = psycopg2.connect(\n",
-    "            host=ENDPOINT,\n",
-    "            dbname=DB_NAME,\n",
-    "            user=USERNAME,\n",
-    "            password=PASSWORD\n",
+    "            host=endpoint,\n",
+    "            dbname=db_name,\n",
+    "            user=username,\n",
+    "            password=password\n",
     "        )\n",
     "        conn.set_session(autocommit=True)\n",
-    "        print(\"Connection successful.\")\n",
+    "\n",
+    "        print(\"Connection to DB successful.\")\n",
+    "\n",
+    "        s3 = boto3.client('s3',\n",
+    "            aws_access_key_id=aws_access_key_id,\n",
+    "            aws_secret_access_key=aws_secret_access_key\n",
+    "            )\n",
+    "\n",
+    "        print(\"Connection to Bucket successful.\")\n",
     "                \n",
     "        # Upload DataFrames\n",
-    "        upload_dataframe_to_db(api_df_power_t, \"power_data\", conn)\n",
-    "        upload_dataframe_to_db(api_df_price, \"price_data\", conn)\n",
+    "        upload_dataframe_to_db(api_df_power_t, \"tbl_energy_production_data\", conn)\n",
+    "        upload_dataframe_to_db(api_df_price, \"tbl_energy_price_data\", conn)\n",
+    "        insert_cbet_data_to_db(api_df_cbet, \"tbl_energy_cbet_data\", conn)\n",
+    "        \n",
+    "        \n",
     "\n",
-    "        upload_dataframe_to_bucket(api_df_power_t, \"power\")\n",
-    "        upload_dataframe_to_bucket(api_df_price, \"price\")\n",
+    "        upload_dataframe_to_bucket(api_df_power_t, \"energy_production\",s3,bucket_name)\n",
+    "        upload_dataframe_to_bucket(api_df_price, \"energy_price\",s3,bucket_name)\n",
+    "        upload_dataframe_to_bucket(api_df_cbet, \"energy_cbet\",s3,bucket_name)\n",
     "\n",
     "        conn.close()\n",
     "        print(\"Data uploaded and connection closed.\")\n",
