add historical data

--- a/API-currencydata.ipynb
+++ b/API-currencydata.ipynb
@@ -5,8 +5,17 @@
    "id": "920ec42c",
    "metadata": {},
    "source": [
-    "# Engery Charts API\n",
-    "*Insert Lambda Function Name*"
+    "# Currency data API's"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e1c22f9",
+   "metadata": {},
+   "source": [
+    "## Live Data extraction\n",
+    "\n",
+    "Lambda layer: group2_currency_api"
    ]
   },
   {
@@ -159,6 +168,128 @@
     "            \"currency_rates\": currency_data\n",
     "        }, indent=2)\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa91c2a2",
+   "metadata": {},
+   "source": [
+    "## Historical data extraction:\n",
+    "\n",
+    "Lambda Layer: group2_historical_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdd67dc0",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def fetch_historical_currency_data(start_date=\"2024-04-25\", end_date=\"2025-04-25\", source_currency=\"CHF\", target_currencies=\"EUR\"):\n",
+    "    \"\"\"Fetch historical exchange rates between start_date and end_date\"\"\"\n",
+    "    if not API_KEY:\n",
+    "        return {\"error\": \"API key not found\"}\n",
+    "\n",
+    "    base_url = \"https://api.apilayer.com/currency_data/timeframe\"\n",
+    "    params = f\"?start_date={start_date}&end_date={end_date}&source={source_currency}&currencies={target_currencies}\"\n",
+    "    url = base_url + params\n",
+    "    headers = {\"apikey\": API_KEY}\n",
+    "\n",
+    "    response = requests.get(url, headers=headers)\n",
+    "    return response.json() if response.status_code == 200 else {\"error\": response.text}\n",
+    "\n",
+    "def store_historical_currency_data_in_rds(currency_data):\n",
+    "    \"\"\"Store historical exchange rates in RDS\"\"\"\n",
+    "    try:\n",
+    "        print(\"Connecting to DB...\")\n",
+    "        conn = psycopg2.connect(\n",
+    "            host=ENDPOINT,\n",
+    "            dbname=DB_NAME,\n",
+    "            user=USERNAME,\n",
+    "            password=PASSWORD\n",
+    "        )\n",
+    "        cur = conn.cursor()\n",
+    "        conn.set_session(autocommit=True)\n",
+    "        print(\"DB connection successful.\")\n",
+    "\n",
+    "        table_name = \"tbl_currency_data\"\n",
+    "        columns = {\n",
+    "            \"timestamp\": \"TIMESTAMP NOT NULL\",\n",
+    "            \"source_currency\": \"VARCHAR(10)\",\n",
+    "            \"target_currency\": \"VARCHAR(10)\",\n",
+    "            \"exchange_rate\": \"FLOAT\"\n",
+    "        }\n",
+    "\n",
+    "        # Create table if not exists\n",
+    "        create_table_query = f\"CREATE TABLE IF NOT EXISTS {table_name} (\"\n",
+    "        create_table_query += \", \".join([f\"{col} {datatype}\" for col, datatype in columns.items()])\n",
+    "        create_table_query += \", PRIMARY KEY (timestamp, source_currency, target_currency));\"\n",
+    "        cur.execute(create_table_query)\n",
+    "\n",
+    "        insert_query = f\"\"\"\n",
+    "        INSERT INTO {table_name} ({', '.join(columns.keys())})\n",
+    "        VALUES (%s, %s, %s, %s)\n",
+    "        ON CONFLICT (timestamp, source_currency, target_currency) DO NOTHING;\n",
+    "        \"\"\"\n",
+    "\n",
+    "        for date_str, rates in currency_data.get(\"quotes\", {}).items():\n",
+    "            for pair, rate in rates.items():\n",
+    "                source_currency, target_currency = pair[:3], pair[3:]\n",
+    "                timestamp = datetime.strptime(date_str, \"%Y-%m-%d\")\n",
+    "                cur.execute(\n",
+    "                    insert_query,\n",
+    "                    (timestamp, source_currency, target_currency, rate)\n",
+    "                )\n",
+    "\n",
+    "        cur.close()\n",
+    "        conn.close()\n",
+    "\n",
+    "    except psycopg2.Error as e:\n",
+    "        print(\"Database error:\", e)\n",
+    "\n",
+    "def store_json_to_s3(currency_data, start_date, end_date):\n",
+    "    \"\"\"Store the JSON data to S3 bucket in the same folder as live data\"\"\"\n",
+    "    s3 = boto3.client('s3')\n",
+    "    foldername = \"currency_data\"\n",
+    "    key = f\"{foldername}/currency_data_{start_date}_to_{end_date}.json\"\n",
+    "\n",
+    "    s3.put_object(\n",
+    "        Bucket=S3_BUCKET,\n",
+    "        Key=key,\n",
+    "        Body=json.dumps(currency_data, indent=2),\n",
+    "        ContentType='application/json'\n",
+    "    )\n",
+    "\n",
+    "def lambda_handler(event, context):\n",
+    "    \"\"\"AWS Lambda Entry Point for historical data\"\"\"\n",
+    "    start_date = event.get(\"start_date\", \"2024-04-25\")\n",
+    "    end_date = event.get(\"end_date\", \"2025-04-25\")\n",
+    "\n",
+    "    currency_data = fetch_historical_currency_data(start_date=start_date, end_date=end_date)\n",
+    "\n",
+    "    if \"error\" in currency_data:\n",
+    "        return {\n",
+    "            \"statusCode\": 400,\n",
+    "            \"body\": json.dumps({\"error\": currency_data[\"error\"]}, indent=2)\n",
+    "        }\n",
+    "\n",
+    "    store_historical_currency_data_in_rds(currency_data)\n",
+    "    store_json_to_s3(currency_data, start_date, end_date)\n",
+    "\n",
+    "    return {\n",
+    "        \"statusCode\": 200,\n",
+    "        \"body\": json.dumps({\n",
+    "            \"message\": \"Historical exchange rates stored successfully in RDS and S3.\",\n",
+    "            \"s3_path\": f\"s3://{S3_BUCKET}/currency_data/currency_data_{start_date}_to_{end_date}.json\",\n",
+    "            \"currency_rates\": currency_data\n",
+    "        }, indent=2)\n",
+    "    }\n"
    ]
   }
  ],
