Update energy to get Local Time

--- a/API-import.ipynb
+++ b/API-import.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "745bff8c",
    "metadata": {},
    "outputs": [],
@@ -23,21 +23,24 @@
     "import psycopg2\n",
     "import os\n",
     "import boto3\n",
-    "from psycopg2.extras import execute_values"
+    "from psycopg2.extras import execute_values\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "8b99a536",
    "metadata": {},
    "outputs": [],
    "source": [
+    "load_dotenv('.env', override=True)\n",
+    "\n",
     "# Get Environment Variables\n",
-    "endpoint = os.getenv('ENDPOINT')\n",
-    "db_name = os.getenv('DB_NAME')\n",
-    "username = os.getenv('USERNAME')\n",
-    "password = os.getenv('PASSWORD')\n",
+    "endpoint = os.getenv('ENDPOINT_DL')\n",
+    "db_name = os.getenv('DB_NAME_DL')\n",
+    "username = os.getenv('USERNAME_DL')\n",
+    "password = os.getenv('PASSWORD_DL')\n",
     "aws_access_key_id = os.getenv('AWS_ACCESS_KEY_ID_INTERNAL')\n",
     "aws_secret_access_key = os.getenv('AWS_SECRET_ACCESS_KEY_INTERNAL')\n",
     "bucket_name = os.getenv('BUCKET_NAME')\n",
@@ -49,7 +52,32 @@
    "execution_count": null,
    "id": "615fa9eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connecting to DB & Bucket...\n",
+      "Connection to DB successful.\n",
+      "Connection to Bucket successful.\n",
+      "Error in implementing CBET-Data: invalid input syntax for type double precision: \"Austria\"\n",
+      "LINE 3: ... VALUES ('2024-01-01T00:00:00+01:00'::timestamptz,'Austria',...\n",
+      "                                                             ^\n",
+      "\n",
+      "Data uploaded and connection closed.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'statusCode': 200, 'body': '\"Inport succesfully\"'}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "def upload_dataframe_to_db(df, table_name, conn):\n",
@@ -96,7 +124,8 @@
     "    base_url = \"https://api.energy-charts.info/cbet\"\n",
     "    params = {\n",
     "        \"country\": \"ch\",\n",
-    "        \"start\": date\n",
+    "        \"start\": '2024-01-01',\n",
+    "        \"end\": '2025-05-17'\n",
     "    }\n",
     "    headers = {\n",
     "        'accept': 'application/json'\n",
@@ -111,30 +140,37 @@
     "    \n",
     "\n",
     "def extract_cbet_data(json_data: dict) -> pd.DataFrame:\n",
-    "    records = []\n",
-    "    timestamps = json_data.get('unix_seconds', [])\n",
-    "    for country in json_data.get('countries', []):\n",
-    "        country_name = country.get('name')\n",
-    "        values = country.get('data', [])\n",
+    "    idx = (pd.to_datetime(json_data[\"unix_seconds\"], unit=\"s\", utc=True)\n",
+    "             .tz_convert(\"Europe/Zurich\"))\n",
+    "    idx.name = \"timestamp\"\n",
     "\n",
-    "        for ts, value in zip(timestamps, values):\n",
-    "            dtime = dt.datetime.utcfromtimestamp(ts)\n",
-    "            records.append({\n",
-    "                'timestamp': dtime,\n",
-    "                'country': country_name,\n",
-    "                'value': value\n",
-    "            })\n",
-    "            df_records = pd.DataFrame(records)\n",
-    "    return df_records\n",
+    "    frames = []\n",
+    "\n",
+    "    for country in json_data.get(\"countries\", []):\n",
+    "        values = country.get(\"data\", [])\n",
+    "        if len(values) != len(idx):\n",
+    "            # length guard – optional but helpful for debugging mismatches\n",
+    "            raise ValueError(\n",
+    "                f\"Length mismatch for {country.get('name')}: \"\n",
+    "                f\"{len(values)} values vs {len(idx)} timestamps\"\n",
+    "            )\n",
+    "        df = pd.DataFrame(\n",
+    "            {\"value\": values, \"country\": country.get(\"name\")},\n",
+    "            index=idx\n",
+    "        )\n",
+    "        frames.append(df)\n",
+    "\n",
+    "    return pd.concat(frames).reset_index()\n",
     "\n",
     "def insert_cbet_data_to_db(df_cbet, table_name, conn):\n",
     "    cur = conn.cursor()\n",
     "    df_cbet = df_cbet.fillna(0)\n",
     "\n",
+    "    # Fix column type assignment\n",
     "    column_defs = ', '.join([\n",
-    "        f\"{col} {'timestamp' if col == 'timestamp' else ('text' if col == 'unit' else 'float')}\"\n",
+    "        f\"{col} {'timestamp' if col == 'timestamp' else ('text' if col == 'country' else 'float')}\"\n",
     "        for col in df_cbet.columns\n",
-    "        ])\n",
+    "    ])\n",
     "\n",
     "    create_query = f\"CREATE TABLE IF NOT EXISTS {table_name} ({column_defs});\"\n",
     "    cur.execute(create_query)\n",
@@ -143,6 +179,7 @@
     "    INSERT INTO {table_name} (timestamp, country, value)\n",
     "    VALUES %s\n",
     "    \"\"\"\n",
+    "\n",
     "    data_tuples = [\n",
     "        (row['timestamp'], row['country'], row['value'])\n",
     "        for _, row in df_cbet.iterrows()\n",
@@ -158,27 +195,28 @@
     "    finally:\n",
     "        cur.close()\n",
     "\n",
-    "def lambda_handler(event, context):\n",
+    "\n",
+    "def lambda_handler_historic():\n",
     "    date = dt.datetime.today().date()\n",
     "    start_date = str(date-dt.timedelta(days=1))\n",
     "\n",
-    "    api_result_power = requests.get(f'https://api.energy-charts.info/public_power?country=ch&start={start_date}')\n",
-    "    api_result_prices = requests.get(f'https://api.energy-charts.info/price?bzn=CH&start={start_date}')\n",
+    "    # api_result_power = requests.get(f'https://api.energy-charts.info/public_power?country=ch&start=2024-01-01&end=2025-05-17')\n",
+    "    # api_result_prices = requests.get(f'https://api.energy-charts.info/price?bzn=CH&start=2024-01-01&end=2025-05-17')\n",
     "\n",
-    "    api_response_power = api_result_power.json()\n",
-    "    api_response_prices = api_result_prices.json()\n",
+    "    # api_response_power = api_result_power.json()\n",
+    "    # api_response_prices = api_result_prices.json()\n",
     "\n",
     "    cbet_json = fetch_cbet_data(start_date)\n",
     "\n",
-    "    api_df_power = pd.DataFrame(api_response_power[\"production_types\"])\n",
-    "    api_df_power_t = pd.DataFrame(api_df_power['data'].tolist()).T\n",
-    "    api_df_power_t.columns = api_df_power['name']\n",
-    "    api_df_power_t.index = pd.to_datetime(api_response_power[\"unix_seconds\"], unit='s')\n",
+    "    # api_df_power = pd.DataFrame(api_response_power[\"production_types\"])\n",
+    "    # api_df_power_t = pd.DataFrame(api_df_power['data'].tolist()).T\n",
+    "    # api_df_power_t.columns = api_df_power['name']\n",
+    "    # api_df_power_t.index = pd.to_datetime(api_response_power[\"unix_seconds\"], unit='s', utc=True).tz_convert(\"Europe/Zurich\")\n",
     "\n",
-    "    api_df_price = pd.DataFrame(api_response_prices[\"price\"])\n",
-    "    api_df_price['Unit'] = api_response_prices[\"unit\"]\n",
-    "    api_df_price.columns = ['Price', 'Unit']\n",
-    "    api_df_price.index = pd.to_datetime(api_response_prices[\"unix_seconds\"], unit='s')\n",
+    "    # api_df_price = pd.DataFrame(api_response_prices[\"price\"])\n",
+    "    # api_df_price['Unit'] = api_response_prices[\"unit\"]\n",
+    "    # api_df_price.columns = ['Price', 'Unit']\n",
+    "    # api_df_price.index = pd.to_datetime(api_response_prices[\"unix_seconds\"], unit='s', utc=True).tz_convert(\"Europe/Zurich\")\n",
     "\n",
     "    api_df_cbet = extract_cbet_data(cbet_json)\n",
     "\n",
@@ -202,14 +240,14 @@
     "        print(\"Connection to Bucket successful.\")\n",
     "                \n",
     "        # Upload DataFrames\n",
-    "        upload_dataframe_to_db(api_df_power_t, \"tbl_energy_production_data\", conn)\n",
-    "        upload_dataframe_to_db(api_df_price, \"tbl_energy_price_data\", conn)\n",
+    "        # upload_dataframe_to_db(api_df_power_t, \"tbl_energy_production_data\", conn)\n",
+    "       #  upload_dataframe_to_db(api_df_price, \"tbl_energy_price_data\", conn)\n",
     "        insert_cbet_data_to_db(api_df_cbet, \"tbl_energy_cbet_data\", conn)\n",
     "        \n",
     "        \n",
     "\n",
-    "        upload_dataframe_to_bucket(api_df_power_t, \"energy_production\",s3,bucket_name)\n",
-    "        upload_dataframe_to_bucket(api_df_price, \"energy_price\",s3,bucket_name)\n",
+    "        # upload_dataframe_to_bucket(api_df_power_t, \"energy_production\",s3,bucket_name)\n",
+    "        # upload_dataframe_to_bucket(api_df_price, \"energy_price\",s3,bucket_name)\n",
     "        upload_dataframe_to_bucket(api_df_cbet, \"energy_cbet\",s3,bucket_name)\n",
     "\n",
     "        conn.close()\n",
@@ -226,7 +264,9 @@
     "    return {\n",
     "        'statusCode': 200,\n",
     "        'body': json.dumps(\"Inport succesfully\")\n",
-    "    }\n"
+    "    }\n",
+    "\n",
+    "lambda_handler_historic()"
    ]
   }
  ],
